update everybody to make use of the new CompositeOp interface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,23 @@ if (BUILD_TESTS)
 
 endif (BUILD_TESTS)
 
+add_subdirectory(Operator)
 add_subdirectory(Module)
 add_subdirectory(DAG)
 
-#add_library(HobbitCore HobbitOperator)
+file(GLOB_RECURSE
+        ALL_CXX_SOURCE_FILES
+        **/*.[chi]pp **/*.[chi]
+        )
+
+find_program(CLANG_FORMAT "clang-format")
+if(CLANG_FORMAT)
+    add_custom_target(
+            clang-format
+            COMMAND ${CLANG_FORMAT}
+            -i
+            -style=file
+            ${ALL_CXX_SOURCE_FILES}
+
+    )
+endif()
