--- a/Module/CMakeLists.txt
+++ b/Module/CMakeLists.txt
@@ -8,10 +8,6 @@ file(GLOB HEADERS include/*.hpp)
 
 llvm_map_components_to_libnames(llvm_libs all)
 
-add_library(HobbitModule ${SOURCES} ${HEADERS})
-target_link_libraries(HobbitModule c++ ${llvm_libs})
+add_library(HobbitModule SHARED ${SOURCES} ${HEADERS})
+target_link_libraries(HobbitModule c++ ${llvm_libs} HobbitOperator HobbitDAG)
 target_include_directories(HobbitModule PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
-
-#if (BUILD_TESTS)
-#    add_gtest(ElementWiseOp HobbitOperator)
-#endif (BUILD_TESTS)
