--- a/Operator/CMakeLists.txt
+++ b/Operator/CMakeLists.txt
@@ -8,7 +8,7 @@ file(GLOB HEADERS include/*.hpp)
 
 llvm_map_components_to_libnames(llvm_libs all)
 
-add_library(HobbitOperator ${SOURCES} ${HEADERS})
+add_library(HobbitOperator SHARED ${SOURCES} ${HEADERS})
 target_link_libraries(HobbitOperator c++ ${llvm_libs})
 target_include_directories(HobbitOperator PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
