Trying to think about nice abstractions to simplify logic vs scheduling (a la Halide)

--- a/Operator/CMakeLists.txt
+++ b/Operator/CMakeLists.txt
@@ -10,7 +10,7 @@ llvm_map_components_to_libnames(llvm_libs all)
 
 add_library(HobbitOperator SHARED ${SOURCES} ${HEADERS})
 target_link_libraries(HobbitOperator c++ ${llvm_libs})
-target_include_directories(HobbitOperator PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_include_directories(HobbitOperator PUBLIC ${LLVM_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 if (BUILD_TESTS)
     add_gtest(CompositeOp HobbitOperator)
