Move code around to clean it up, thinking about operator interface now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ if (BUILD_TESTS)
 
 endif (BUILD_TESTS)
 
+add_subdirectory(Buffer)
 add_subdirectory(Operator)
 add_subdirectory(Module)
 add_subdirectory(DAG)
