update structure, using techniques more similar to LLVM base lib now

--- a/Module/CMakeLists.txt
+++ b/Module/CMakeLists.txt
@@ -7,7 +7,12 @@ file(GLOB SOURCES src/*.cpp)
 file(GLOB HEADERS include/*.hpp)
 
 llvm_map_components_to_libnames(llvm_libs all)
+message(STATUS ${llvm_libs})
 
 add_library(HobbitModule SHARED ${SOURCES} ${HEADERS})
-target_link_libraries(HobbitModule c++ ${llvm_libs} HobbitOperator HobbitDAG)
-target_include_directories(HobbitModule PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(HobbitModule c++ ${llvm_libs} HobbitBuffer)
+target_include_directories(HobbitModule PUBLIC ${LLVM_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+if (BUILD_TESTS)
+    add_gtest(Module HobbitModule)
+endif (BUILD_TESTS)
