--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ if (BUILD_TESTS)
 
 endif (BUILD_TESTS)
 
-#add_subdirectory(AST)
+add_subdirectory(AST)
 add_subdirectory(Core)
 
 file(GLOB_RECURSE
