--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} -V)
 
 function(add_gtest test_name lib)
     add_executable(Test${test_name} EXCLUDE_FROM_ALL ${CMAKE_CURRENT_SOURCE_DIR}/test/Test${test_name}.cpp)
-    target_link_libraries(Test${test_name} gtest ${lib})
+    target_link_libraries(Test${test_name} gtest_main ${lib})
     add_test(NAME Test${test_name} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/Test${test_name})
     add_dependencies(check Test${test_name})
 endfunction()
