not sure if everything still works but moving things around for ease of use/build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,35 +18,17 @@ set(GTEST_PREFIX ${CMAKE_CURRENT_BINARY_DIR})
 include(AddGTest)
 
 enable_testing()
-
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} -V)
 
-function(add_gtest test_name lib)
-    add_executable(Test${test_name} EXCLUDE_FROM_ALL ${CMAKE_CURRENT_SOURCE_DIR}/test/Test${test_name}.cpp)
-    target_link_libraries(Test${test_name} gtest_main ${lib})
-    add_test(NAME Test${test_name} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/Test${test_name})
-    add_dependencies(check Test${test_name})
-endfunction()
+llvm_map_components_to_libnames(llvm_libs all)
 
-add_subdirectory(AST)
-add_subdirectory(Operators)
+file(GLOB INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include/**/*.h*)
+file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c*)
+add_library(Hobbit SHARED ${INCLUDE} ${SOURCES})
+target_link_libraries(Hobbit PUBLIC c++ ${llvm_libs} glog::glog)
+target_include_directories(Hobbit PUBLIC ${LLVM_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+add_subdirectory(registry)
 add_subdirectory(KernelFusion)
 
-file(GLOB_RECURSE
-        ALL_CXX_SOURCE_FILES
-        AST/**/*.[chi]pp AST/**/*.[chi]
-        Operators/**/*.[chi]pp Operators/**/*.[chi]
-        KernelFusion/**/*.[chi]pp KernelFusion/**/*.[chi]
-        )
-
-find_program(CLANG_FORMAT "clang-format")
-if(CLANG_FORMAT)
-    add_custom_target(
-            clang-format
-            COMMAND ${CLANG_FORMAT}
-            -i
-            -style=file
-            ${ALL_CXX_SOURCE_FILES}
-
-    )
-endif()
+include(AddClangFormat)
