grappling with codegen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,6 @@ add_subdirectory(registry)
 add_subdirectory(KernelFusion)
 
 add_gtest(DataStorage Hobbit)
-add_gtest(AST Hobbit)
+add_gtest(AST Hobbit HobbitOpeltwise_add)
 
 include(AddClangFormat)
