--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,12 +25,12 @@ llvm_map_components_to_libnames(llvm_libs all)
 file(GLOB CODEGEN ${CMAKE_CURRENT_SOURCE_DIR}/include/codegen/*.hpp)
 file(GLOB GRAPH ${CMAKE_CURRENT_SOURCE_DIR}/include/graph/*.hpp)
 file(GLOB OPS ${CMAKE_CURRENT_SOURCE_DIR}/include/ops/*.hpp)
+file(GLOB UTILS ${CMAKE_CURRENT_SOURCE_DIR}/include/utils/*.hpp)
 file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c*)
-add_library(Hobbit SHARED ${CODEGEN} ${GRAPH} ${OPS} ${SOURCES})
+add_library(Hobbit SHARED ${CODEGEN} ${GRAPH} ${OPS} ${UTILS} ${SOURCES})
 target_link_libraries(Hobbit PUBLIC c++ ${llvm_libs} glog::glog)
 target_include_directories(Hobbit PUBLIC ${LLVM_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-add_subdirectory(registry)
 add_subdirectory(KernelFusion)
 
 add_gtest(DataStorage Hobbit)
