--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,13 +22,13 @@ add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} -V)
 
 llvm_map_components_to_libnames(llvm_libs all)
 
-file(GLOB CODEGEN ${CMAKE_CURRENT_SOURCE_DIR}/include/codegen/*.hpp)
-file(GLOB GRAPH ${CMAKE_CURRENT_SOURCE_DIR}/include/graph/*.hpp)
-file(GLOB OPS ${CMAKE_CURRENT_SOURCE_DIR}/include/ops/*.hpp)
-file(GLOB UTILS ${CMAKE_CURRENT_SOURCE_DIR}/include/utils/*.hpp)
-file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c*)
-add_library(Hobbit SHARED ${CODEGEN} ${GRAPH} ${OPS} ${UTILS} ${SOURCES})
-target_link_libraries(Hobbit PUBLIC c++ ${llvm_libs} glog::glog)
+file(GLOB CODEGEN ${CMAKE_CURRENT_SOURCE_DIR}/include/codegen/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/src/codegen/*.cpp)
+file(GLOB GRAPH ${CMAKE_CURRENT_SOURCE_DIR}/include/graph/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/src/graph/*.cpp)
+file(GLOB OPS ${CMAKE_CURRENT_SOURCE_DIR}/include/ops/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/src/ops/*.cpp)
+file(GLOB UTILS ${CMAKE_CURRENT_SOURCE_DIR}/include/utils/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/src/utils/*.cpp)
+file(GLOB COMPILE ${CMAKE_CURRENT_SOURCE_DIR}/include/compile/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/src/compile/*.cpp)
+add_library(Hobbit SHARED ${CODEGEN} ${GRAPH} ${OPS} ${UTILS} ${COMPILE})
+target_link_libraries(Hobbit PUBLIC ${llvm_libs} glog::glog)
 target_include_directories(Hobbit PUBLIC ${LLVM_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 add_subdirectory(KernelFusion)
