add polly optimizer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ file(GLOB OPS ${CMAKE_CURRENT_SOURCE_DIR}/include/ops/*.hpp ${CMAKE_CURRENT_SOUR
 file(GLOB UTILS ${CMAKE_CURRENT_SOURCE_DIR}/include/utils/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/src/utils/*.cpp)
 file(GLOB COMPILE ${CMAKE_CURRENT_SOURCE_DIR}/include/compile/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/src/compile/*.cpp)
 add_library(Hobbit SHARED ${CODEGEN} ${GRAPH} ${OPS} ${UTILS} ${COMPILE})
-target_link_libraries(Hobbit PUBLIC ${llvm_libs} glog::glog)
+target_link_libraries(Hobbit PUBLIC ${llvm_libs} Polly isl glog::glog)
 target_include_directories(Hobbit PUBLIC ${LLVM_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 add_subdirectory(passes)
